--- a/Oops Concepts.ipynb
+++ b/Oops Concepts.ipynb
@@ -169,6 +169,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Outer Class Conductor\n",
+      "College Method\n",
+      "Inner Class Constructor\n",
+      "Student Method\n"
+     ]
+    }
+   ],
+   "source": [
+    "class college:\n",
+    "    def  __init__(self):\n",
+    "        print('Outer Class Conductor')\n",
+    "        \n",
+    "    class student:\n",
+    "        def __init__(self):\n",
+    "            print('Inner Class Constructor')\n",
+    "            \n",
+    "        def displayS(self):\n",
+    "            print('Student Method')\n",
+    "            \n",
+    "    def displayC(self):\n",
+    "        print('College Method')\n",
+    "        \n",
+    "c = college()\n",
+    "c.displayC()\n",
+    "s = c.student()\n",
+    "s.displayS()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
