--- a/Oops Concepts.ipynb
+++ b/Oops Concepts.ipynb
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
    ],
    "source": [
     "class student:\n",
-    "    college='UCLA'  # static variable\n",
+    "   # college='UCLA'  # static variable\n",
     "    def __init__(self,name,roll,marks):\n",
     "        self.name = name\n",
     "        self.roll = roll\n",
@@ -153,7 +153,7 @@
     "        print('College Name:',student.college)  # had to be preceded with class name\n",
     "        print()\n",
     "        \n",
-    "# student.college = 'UCLA'   static variables can also be  created outside the class(it will give same results)\n",
+    "student.college = 'UCLA'   # static variables can also be  created outside the class(it will give same results)\n",
     "s1 = student('aaa',101,78.25)\n",
     "s2 = student('bbb',102,62.55)\n",
     "s1.display()\n",
