--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -35,9 +35,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): ...working... done\n",
+      "Solving environment: ...working... failed with initial frozen solve. Retrying with flexible solve.\n",
+      "Solving environment: ...working... failed with repodata from current_repodata.json, will retry with next repodata source.\n",
+      "Collecting package metadata (repodata.json): ...working... done\n",
+      "Solving environment: ...working... failed with initial frozen solve. Retrying with flexible solve.\n",
+      "Solving environment: ...working... \n",
+      "Found conflicts! Looking for incompatible packages.\n",
+      "This can take several minutes.  Press CTRL-C to abort.\n",
+      "failed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Building graph of deps:   0%|          | 0/3 [00:00<?, ?it/s]\n",
+      "Examining tensorflow:   0%|          | 0/3 [00:00<?, ?it/s]  \n",
+      "Examining python=3.8:  33%|###3      | 1/3 [00:00<00:00,  3.34it/s]\n",
+      "Examining python=3.8:  67%|######6   | 2/3 [00:00<00:00,  6.67it/s]\n",
+      "Examining @/win-64::__cuda==10.1=0:  67%|######6   | 2/3 [00:00<00:00,  6.67it/s]\n",
+      "                                                                                 \n",
+      "\n",
+      "Determining conflicts:   0%|          | 0/3 [00:00<?, ?it/s]\n",
+      "Examining conflict for python tensorflow:   0%|          | 0/3 [00:00<?, ?it/s]\n",
+      "Examining conflict for __cuda:  33%|###3      | 1/3 [00:00<00:01,  1.22it/s]   \n",
+      "Examining conflict for __cuda:  67%|######6   | 2/3 [00:00<00:00,  2.44it/s]\n",
+      "                                                                            \n",
+      "\n",
+      "UnsatisfiableError: The following specifications were found\n",
+      "to be incompatible with the existing python installation in your environment:\n",
+      "\n",
+      "Specifications:\n",
+      "\n",
+      "  - tensorflow -> python[version='3.5.*|3.6.*|3.7.*']\n",
+      "\n",
+      "Your python: python=3.8\n",
+      "\n",
+      "If python is on the left-most side of the chain, that's the version you've asked for.\n",
+      "When python appears to the right, that indicates that the thing on the left is somehow\n",
+      "not available for the python version you are constrained to. Note that conda will not\n",
+      "change your python version to a different minor version unless you explicitly specify\n",
+      "that.\n",
+      "\n",
+      "The following specifications were found to be incompatible with your CUDA driver:\n",
+      "\n",
+      "  - feature:/win-64::__cuda==10.1=0\n",
+      "  - feature:|@/win-64::__cuda==10.1=0\n",
+      "\n",
+      "Your installed CUDA driver is: 10.1\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "!conda install --yes tensorflow"
