--- a/python-practice/practice.ipynb
+++ b/python-practice/practice.ipynb
@@ -123,6 +123,47 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n",
+      " 1\n",
+      " 1\n",
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [1, 0, 0], [1, 1, 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x = int(input())\n",
+    "y = int(input())\n",
+    "z = int(input())\n",
+    "n = int(input())\n",
+    "#list_1=[i,j,k for i in range]\n",
+    "\n",
+    "print([[i,j,k] for i in range(x+1) for j in range(y+1) for k in range(z+1) if(i+j+k)!=n])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
