--- a/python-practice/practice.ipynb
+++ b/python-practice/practice.ipynb
@@ -163,6 +163,44 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "a = []\n",
+    "n = int(input())\n",
+    "for i in range(n):\n",
+    "    item = int(input())\n",
+    "    a.append(item)\n",
+    "\n",
+    "a.sort()\n",
+    "print(a)\n",
+    "set1 = set(a)\n",
+    "set1.remove(max(set1))\n",
+    "print(max(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = []\n",
+    "n = int(input())\n",
+    "for i in range(n):\n",
+    "    item = int(input())\n",
+    "    a.append(item)\n",
+    "\n",
+    "a.sort()\n",
+    "print(a)\n",
+    "set1 = set(a)\n",
+    "set1.remove(max(set1))\n",
+    "print(max(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
