--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -363,6 +363,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hash tables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# First recurring character\n",
+    "def func(mylist):\n",
+    "\n",
+    "  for i in range(0,len(mylist)):\n",
+    "    for j in range(i+1,len(mylist)):\n",
+    "      if mylist[i] == mylist[j]:\n",
+    "        return mylist[i] \n",
+    "  return 0\n",
+    "\n",
+    "def hashtable(mylist):\n",
+    "  mydict = {}\n",
+    "  for i in range(0,len(mylist)):\n",
+    "    if mylist[i] in mydict:\n",
+    "      return mylist[i]\n",
+    "    else:\n",
+    "      mydict[mylist[i]]=i\n",
+    "  return 0\n",
+    "  \n",
+    "\n",
+    "mylist = [2,1,1,2,3,4,5]\n",
+    "x = hashtable(mylist)\n",
+    "print(x)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
