--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -409,9 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "{'bucket': 16, 'hashmap': [[], [], [], [['ora', 300]], [], [['banan', 200]], [['grapes', 1000], ['apples', 10]], [], [], [], [], [], [], [], [], []]}\n",
+      "{'bucket': 16, 'hashmap': [[], [], [], [['ora', 300]], [], [['banan', 200]], [['grapes', 1000]], [], [], [], [], [], [], [], [], []]}\n"
+     ]
+    }
+   ],
    "source": [
     "# Implementing hash tables\n",
     "class Hashtable:\n",
@@ -480,6 +490,46 @@
     "h.remove('apples')\n",
     "print(h)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linked Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-66de39e07233>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-66de39e07233>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    self.head:\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head:\n",
+    "            value: self.value\n",
+    "            next: null\n",
+    "        self.head = self.tail\n",
+    "        self.length = 1\n",
+    "\n",
+    "l = LinkedList(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
