--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -517,11 +517,11 @@
     "    def __init__(self):\n",
     "        self.head:\n",
     "            value: self.value\n",
-    "            next: null\n",
+    "            next: Null\n",
     "        self.head = self.tail\n",
     "        self.length = 1\n",
     "\n",
-    "l = LinkedList(10)"
+    "l = LinkedList(10) "
    ]
   },
   {
