--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -500,28 +500,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-66de39e07233>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-66de39e07233>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    self.head:\u001b[0m\n\u001b[1;37m              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class LinkedList:\n",
+    "class Node():\n",
+    "    \n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        \n",
+    "class LinkedList():\n",
+    "    \n",
     "    def __init__(self):\n",
-    "        self.head:\n",
-    "            value: self.value\n",
-    "            next: Null\n",
-    "        self.head = self.tail\n",
-    "        self.length = 1\n",
-    "\n",
-    "l = LinkedList(10) "
+    "        self.data = None\n",
+    "        self.next = None\n",
+    "    \n",
+    "    "
    ]
   },
   {
