--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -522,8 +522,18 @@
     "            self.head = new_node\n",
     "            self.tail = self.head\n",
     "            self.length = 1\n",
-    "    else:\n",
-    "        self.tail.next = new_node\n",
+    "        else:\n",
+    "            self.tail.next = new_node\n",
+    "            self.tail = new_node\n",
+    "            self.length+=1\n",
+    "    \n",
+    "    def prepend(self,data):\n",
+    "        new_node = Node(data)\n",
+    "        new_node.next = self.head\n",
+    "        self.head = new_node\n",
+    "        self.length+=1\n",
+    "        \n",
+    "    def insert(self,index,data):\n",
     "        "
    ]
   },
