--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -534,7 +534,10 @@
     "        self.length+=1\n",
     "        \n",
     "    def insert(self,index,data):\n",
-    "        "
+    "        new_node = Node(data)\n",
+    "        i = 0\n",
+    "        temp = self.head\n",
+    "        \n"
    ]
   },
   {
