--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,22 @@
     "        new_node = Node(data)\n",
     "        i = 0\n",
     "        temp = self.head\n",
-    "        \n"
+    "        if index>=self.lenth:\n",
+    "            self.append(data)\n",
+    "            return\n",
+    "        if index == 0:\n",
+    "            self.prepend(data)\n",
+    "            return\n",
+    "        while i<self.length:\n",
+    "            if i == index-1:\n",
+    "                temp.next, new_node.next = new_node, temp.next\n",
+    "                self.length+=1\n",
+    "                break\n",
+    "            temp = temp.next\n",
+    "            i+=1\n",
+    "\n",
+    "    def remove(self,index):\n",
+    "        "
    ]
   },
   {
