--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -551,8 +551,7 @@
     "            temp = temp.next\n",
     "            i+=1\n",
     "\n",
-    "    def remove(self,index):\n",
-    "        "
+    "    def remove(self,index):\n"
    ]
   },
   {
