--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -15,7 +15,7 @@
    ],
    "source": [
     "# strings\n",
-    "strings = ['a', 'b', 'c', 'd']\n",
+    "'''strings = ['a', 'b', 'c', 'd']\n",
     "\n",
     "#push\n",
     "strings.append('e')\n",
@@ -25,167 +25,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['x', 'a', 'x', 'b', 'c', 'd', 'e']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "strings.insert(0,'x')\n",
     "print(strings)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'x'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "strings.pop(2)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['x', 'a', 'b', 'c', 'd', 'e']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "strings"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "strings.insert(2, 'alien')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['x', 'a', 'alien', 'b', 'c', 'd', 'e']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(strings)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'x'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "strings.pop(0)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['a', 'alien', 'b', 'c', 'd', 'e']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(strings)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Array object at 0x000001DA00F33160>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "class Array:\n",
     "    def __init__(self):\n",
     "        self.length = 0\n",
     "        self.data = {}\n",
-    "        \n",
+    "\n",
     "    def get(self, index):\n",
     "        return self.data[index]\n",
-    "        \n",
+    "\n",
     "    def push(self,item):\n",
     "        self.data[self.length] = item\n",
     "        self.length+=1\n",
-    "        \n",
+    "\n",
     "    def pop():\n",
     "        lastitem = self.data[self.length-1]\n",
     "        del self.data[self.length-1]\n",
     "        self.length-=1\n",
     "        return lastitem\n",
-    "    \n",
+    "\n",
     "    def delete(self, index):\n",
     "        deleteditem = self.data[index]\n",
-    "        \n",
+    "\n",
     "        for i in range(index, self.length-1):\n",
     "            self.data[i] = self.data[i+1]\n",
-    "        \n",
+    "\n",
     "        del self.data[self.length-1]\n",
     "        self.length-=1\n",
     "        return deleteditem\n",
-    "    \n",
+    "\n",
     "arr=Array()\n",
     "arr.push(3)\n",
     "arr.push('hi')\n",
@@ -195,38 +164,32 @@
     "arr.push('welcome')\n",
     "arr.delete(3)\n",
     "print(arr)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<__main__.Array object at 0x000001DA00F33160>\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "print(arr)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['l', 'l', 'l', 'o', 'K', ' ', 's', 'i', ' ', 'e', 'm', 'a', 'n', ' ', 'y', 'M']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Reversing a string\n",
     "def reverse(stri):\n",
@@ -237,120 +200,109 @@
     "    return b\n",
     "x = reverse(\"My name is Kolll\")\n",
     "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n",
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
    ],
-   "source": [
-    "list1 = [1,2,3,4,5]\n",
-    "print(list1)\n",
-    "print(str(list1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
-   ],
-   "source": [
-    "print(type(str(list1)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 20\n",
-    "print(type(a))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20\n"
-     ]
-    }
-   ],
-   "source": [
-    "b = str(a)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5]\n"
-     ]
-    }
-   ],
-   "source": [
-    "str1= '[1, 2, 3, 4, 5]'\n",
-    "print(str1)"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list1 = [1,2,3,4,5]\n",
+    "print(list1)\n",
+    "print(str(list1))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(type(str(list1)))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "a = 20\n",
+    "print(type(a))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "b = str(a)\n",
+    "print(b)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "str1= '[1, 2, 3, 4, 5]'\n",
+    "print(str1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Merging sorted arrays\n",
     "def mergearray1(a,b):\n",
-    "    \n",
+    "\n",
     "    if(len(a)==0 or len(b)==0):\n",
     "        return a+b\n",
-    "    \n",
+    "\n",
     "    myarray = []\n",
     "    i=0\n",
     "    j=0\n",
-    "    \n",
+    "\n",
     "    while i<len(a) and j<len(b):\n",
     "        if(a[i]<b[j]):\n",
     "            myarray.append(a[i])\n",
     "            i+=1\n",
-    "            \n",
+    "\n",
     "        elif(b[j]<a[i]):\n",
     "            myarray.append(b[j])\n",
     "            j+=1\n",
@@ -360,28 +312,27 @@
     "b = [2,3,4,5,6,9,11,76]\n",
     "x = mergearray1(a,b)\n",
     "print(x)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Hash tables"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# First recurring character\n",
     "def func(mylist):\n",
@@ -389,7 +340,7 @@
     "  for i in range(0,len(mylist)):\n",
     "    for j in range(i+1,len(mylist)):\n",
     "      if mylist[i] == mylist[j]:\n",
-    "        return mylist[i] \n",
+    "        return mylist[i]\n",
     "  return 0\n",
     "\n",
     "def hashtable(mylist):\n",
@@ -400,28 +351,23 @@
     "    else:\n",
     "      mydict[mylist[i]]=i\n",
     "  return 0\n",
-    "  \n",
+    "\n",
     "\n",
     "mylist = [2,1,1,2,3,4,5]\n",
     "x = hashtable(mylist)\n",
     "print(x)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1000\n",
-      "{'bucket': 16, 'hashmap': [[], [], [], [['ora', 300]], [], [['banan', 200]], [['grapes', 1000], ['apples', 10]], [], [], [], [], [], [], [], [], []]}\n",
-      "{'bucket': 16, 'hashmap': [[], [], [], [['ora', 300]], [], [['banan', 200]], [['grapes', 1000]], [], [], [], [], [], [], [], [], []]}\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Implementing hash tables\n",
     "class Hashtable:\n",
@@ -433,17 +379,17 @@
     "        Load Factor = (n/k)\n",
     "        where n is the number of max number of elements that can be stored dict\n",
     "        k is the bucket size\n",
-    "        Optimal Load factor is around (2/3) such that the effect of hash collisions is minimum \n",
+    "        Optimal Load factor is around (2/3) such that the effect of hash collisions is minimum\n",
     "        \"\"\"\n",
     "        self.bucket = 16\n",
     "        self.hashmap = [[] for i in range(self.bucket)]\n",
-    "    \n",
+    "\n",
     "    def __str__(self):\n",
     "        return str(self.__dict__)\n",
     "\n",
     "    def hash(self, key):\n",
     "        return len(key) % self.bucket\n",
-    "    \n",
+    "\n",
     "    def put(self, key, value):\n",
     "        \"\"\"\n",
     "        value may already be present\n",
@@ -456,7 +402,7 @@
     "                return None\n",
     "        reference.append([key, value])\n",
     "        return None\n",
-    "        \n",
+    "\n",
     "    def get(self, key):\n",
     "        \"\"\"\n",
     "        Returns the value to which the specified key is mapped, or -1 if this map contains no mapping for the key\n",
@@ -467,7 +413,7 @@
     "            if reference[i][0] == key:\n",
     "                return reference[i][1]\n",
     "        return -1\n",
-    "        \n",
+    "\n",
     "    def remove(self, key):\n",
     "        \"\"\"\n",
     "        Removes the mapping of the specified value key if this map contains a mapping for the key\n",
@@ -488,15 +434,24 @@
     "print(h.get('grapes'))\n",
     "print(h)\n",
     "h.remove('apples')\n",
-    "print(h)"
-   ]
+    "print(h)\n",
+    "'''"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Linked Lists"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -551,7 +506,52 @@
     "            temp = temp.next\n",
     "            i+=1\n",
     "\n",
-    "    def remove(self,index):\n"
+    "    def remove(self,index):\n",
+    "        temp = self.head\n",
+    "        i=0\n",
+    "        if index>=self.length:\n",
+    "            print(\"Entered wrong index\")\n",
+    "\n",
+    "        if index==0:\n",
+    "            self.head = self.head.next\n",
+    "            self.length-=1\n",
+    "            return\n",
+    "\n",
+    "        while i<self.length:\n",
+    "            if i==index-1:\n",
+    "                temp.nerxt = temp.next.next\n",
+    "                self.length-=1\n",
+    "                break\n",
+    "            i+=1\n",
+    "            temp=temp.next\n",
+    "\n",
+    "        def printl(self):\n",
+    "            temp = self.head\n",
+    "            while temp!=None:\n",
+    "                print(temp.data, end = '')\n",
+    "                temp = temo.next\n",
+    "            print()\n",
+    "            print('Length='+str(self.length))\n",
+    "\n",
+    "        def reverse(self):\n",
+    "            prev = None\n",
+    "            self.tail = self.head\n",
+    "            while self.head != None:\n",
+    "                temp = self.head\n",
+    "                self.head = self.head.next\n",
+    "                self.head = temp\n",
+    "\n",
+    "l = LinkedList()\n",
+    "l.append(10)\n",
+    "l.append(5)\n",
+    "l.append(6)\n",
+    "l.prepend(1)\n",
+    "l.insert(2,99)\n",
+    "l.insert(34,23)\n",
+    "l.remove(5)\n",
+    "l.reverse()\n",
+    "l.printl()\n",
+    "print(l.head.data, l.tail.data)"
    ]
   },
   {
