--- a/Data-Structures.ipynb
+++ b/Data-Structures.ipynb
@@ -519,7 +519,7 @@
     "\n",
     "        while i<self.length:\n",
     "            if i==index-1:\n",
-    "                temp.nerxt = temp.next.next\n",
+    "                temp.next = temp.next.next\n",
     "                self.length-=1\n",
     "                break\n",
     "            i+=1\n",
