--- a/python-practice/practice.ipynb
+++ b/python-practice/practice.ipynb
@@ -199,9 +199,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Hash Tables"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -216,7 +214,18 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Left rotation in a 1-D array\n",
+    "n,d = map(int,input().split())\n",
+    "a = list(map(int,input().split()))\n",
+    "i = d\n",
+    "while(i<n):\n",
+    "    print(a[i],end = ' ')\n",
+    "    i+=1\n",
+    "i = 0\n",
+    "for i in range(d):\n",
+    "    print(a[i],end=' ')"
+   ]
   },
   {
    "cell_type": "code",
