--- a/python-practice/practice.ipynb
+++ b/python-practice/practice.ipynb
@@ -21,6 +21,7 @@
     }
    ],
    "source": [
+    "'''\n",
     "n = int(input())\n",
     "if(n%2!=0):\n",
     "    print('Weird')\n",
@@ -204,7 +205,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -224,15 +229,12 @@
     "    i+=1\n",
     "i = 0\n",
     "for i in range(d):\n",
-    "    print(a[i],end=' ')"
+    "    print(a[i],end=' ')\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
