--- a/python-practice/practice.ipynb
+++ b/python-practice/practice.ipynb
@@ -232,6 +232,9 @@
     "    print(a[i],end=' ')\n",
     "'''\n",
     "\n",
+    "a = [2, 4, 3, 5, 6, 7, 1]\n",
+    "b = a.pop(max(a))\n",
+    "print(b)\n",
     "\n",
     "\n"
    ]
