--- a/python-practice/practice.ipynb
+++ b/python-practice/practice.ipynb
@@ -236,6 +236,16 @@
     "b = a.pop(max(a))\n",
     "print(b)\n",
     "\n",
+    "# Number of occurence of an element in an array\n",
+    "\n",
+    "def count(self,arr, n, x):\n",
+    "\t\t# code here\n",
+    "\t\tcount = 0\n",
+    "\t\tfor i in range(n):\n",
+    "\t\t    if arr[i]==x:\n",
+    "\t\t        count+=1\n",
+    "\t\treturn count\n",
+    "\t\n",
     "\n"
    ]
   }
