--- a/python-practice/practice.ipynb
+++ b/python-practice/practice.ipynb
@@ -231,7 +231,7 @@
     "for i in range(d):\n",
     "    print(a[i],end=' ')\n",
     "'''\n",
-    "\n",
+    "'''\n",
     "a = [2, 4, 3, 5, 6, 7, 1]\n",
     "b = a.pop(max(a))\n",
     "print(b)\n",
@@ -245,7 +245,26 @@
     "\t\t    if arr[i]==x:\n",
     "\t\t        count+=1\n",
     "\t\treturn count\n",
-    "\t\n",
+    "'''\n",
+    "\n",
+    "# max sum of i*a[i] in an array\n",
+    "\n",
+    "def rotate(a, d):\n",
+    "    for i in range(d):\n",
+    "        b = a.pop(0)\n",
+    "        a.append(b)\n",
+    "    return a\n",
+    "def max_sum(a,n):\n",
+    "    #code here\n",
+    "    c = []\n",
+    "    sum_arr = []\n",
+    "    for k in range(n):\n",
+    "        summ = 0\n",
+    "        c = rotate(a, k)\n",
+    "        for p in range(len(c)):\n",
+    "            summ += p*c[p]\n",
+    "        sum_arr.append(summ)\n",
+    "    return max(sum_arr)\n",
     "\n"
    ]
   }
