--- a/python-practice/practice.ipynb
+++ b/python-practice/practice.ipynb
@@ -230,7 +230,14 @@
     "i = 0\n",
     "for i in range(d):\n",
     "    print(a[i],end=' ')\n",
+    "\n",
     "'''\n",
+    "# Method 2\n",
+    "  for i in range(d):\n",
+    "        b = a.pop(0)\n",
+    "        a.append(b)\n",
+    "    return a\n",
+    "\n",
     "'''\n",
     "a = [2, 4, 3, 5, 6, 7, 1]\n",
     "b = a.pop(max(a))\n",
